--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ env:
   nsg: wls-nsg
   userEmail: ${{ secrets.USER_EMAIL }}
   userName: ${{ secrets.USER_NAME }}
-  resourceGroupPrefix: ${{ secrets.USER_NAME }}-${{ github.run_id }}-${{ github.run_number }}
+  resourceGroupPrefix: wls-${{ github.run_id }}-${{ github.run_number }}
   wlsPassword: ${{ secrets.WLS_PASSWORD }}
   adminPassword: ${{ secrets.WLS_PASSWORD }}
   wlsDomainName : clusterDomain
